[package]
name = "hns-leaderboard"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
chrono-tz = "0.8.6"
clap = { version = "4.5.2", features = ["derive"] }
encoding_rs = "0.8.33"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
